--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>devChallenges.io</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  </head>
+</head>
+<body style="background:var(--bs-dark-bg-subtle)">
+    <nav class="navbar bg-body-tertiary bg-dark" data-bs-theme="dark">
+        <div class="container-fluid">
+          <span class="navbar-brand mb-0 h1">devChallenges.io</span>
+        </div>
+      </nav>
+    
+      <div id="carouselExampleCaptions" class="carousel slide" style="height: 100vh; width: 75vw; margin:auto; border-radius: 60px;">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./Responsive Web Developer/Minimal_Blog_Card/resources/cactus_img.jpg" class="d-block w-100" alt="./Responsive Web Developer/Minimal_Blog_Card/resources/cactus_img.jpg">
+            <div class="carousel-caption d-none d-md-block" style="background: white; color: black; background: rgba(255, 255, 255, 0.2); border-radius: 16px; box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); backdrop-filter: blur(5px); -webkit-backdrop-filter: blur(5px); border: 1px solid rgba(255, 255, 255, 0.3);">
+              <h5>Minimal Blog Card</h5>
+              <p><a href="./Responsive Web Developer/Minimal_Blog_Card/index.html">View Demo</a></p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./Responsive Web Developer/Minimal_Blog_Card/resources/cactus_img.jpg" class="d-block w-100" alt="./Responsive Web Developer/Minimal_Blog_Card/resources/cactus_img.jpg">
+            <div class="carousel-caption d-none d-md-block" style="background: white; color: black; background: rgba(255, 255, 255, 0.2); border-radius: 16px; box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); backdrop-filter: blur(5px); -webkit-backdrop-filter: blur(5px); border: 1px solid rgba(255, 255, 255, 0.3);">
+              <h5>Coming Soon...</h5>
+              <!-- <p>Some representative placeholder content for the second slide.</p> -->
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev" style="background: black;">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next" style="background: black;">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+</body>
+</html>
